--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
         <section>
           <section id="sec-2" >
-            <h2>Everything is a buffer???</h2>
+            <h2>Editing text...</h2>
+            <p>IDE's forgot the fundamental requirement of a programmer</p>
           </section>
         </section>
 
